@@ -56,29 +56,19 @@
         </alternative>
     </named>
     <sql>
-        <alternative default="mysql_5.1">
-            <mysql_5.1
-                    pinning_package="mysql-client-5.1 mysql-server-5.1 mysql-common libmysqlclient16"
-                    pinning_pin="release o=Ubuntu,n=lucid"
+        <alternative default="mysql_5.5">
+            <mysql_5.5
+                    pinning_package="mysql-server-5.5 mysql-server-5.5 mysql-common libmysqlclient18"
+                    pinning_pin="origin packages.dotdeb.org"
                     pinning_pin_priority="1001"
+                    repository="deb http://packages.dotdeb.org squeeze all"
+                    repository_origin="packages.dotdeb.org"
+                    repository_key_uri="http://www.dotdeb.org/dotdeb.gpg"
                     >
-                <package>mysql-server-5.1</package>
-                <package>mysql-client-5.1</package>
-                <package>libmysqlclient16</package>
-            </mysql_5.1>
-            <mariadb_5.3
-                    pinning_package="mariadb-client-5.3 mariadb-server-5.3 mariadb-common mysql-common libmysqlclient16"
-                    pinning_pin="origin mirror2.hs-esslingen.de"
-                    pinning_pin_priority="1001"
-                    repository="deb http://mirror2.hs-esslingen.de/mariadb/repo/5.3/ubuntu lucid main"
-                    repository_origin="MariaDB"
-                    repository_key_srv="keyserver.ubuntu.com"
-                    repository_key_id="0xcbcb082a1bb943db"
-                    >
-                <package>mariadb-client-5.3</package>
-                <package>mariadb-server-5.3</package>
-                <package>libmysqlclient16</package>
-            </mariadb_5.3>
+                <package>mysql-server-5.5</package>
+                <package>mysql-client-5.5</package>
+                <package>libmysqlclient18</package>
+            </mysql_5.5>
             <mariadb_5.5
                     pinning_package="mariadb-client-5.5 mariadb-server-5.5 mariadb-common mysql-common libmysqlclient18"
                     pinning_pin="origin mirror.netcologne.de"
